examples/test/testpolicy6565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6565
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key3: value7
      key14: value0
      key46: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value32
          key9: value37
      podSelector:
        matchLabels:
          key24: value49
          key39: value2
